:wrench: actix の導入
Webサーバーとして機能させるため Actix Web を導入しました。

--- a/src/app/Cargo.toml
+++ b/src/app/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 lish-domain = { path = "../domain" }
 lish-backend-core = { path = "../core" }
 lish-backend-usecase = { path = "../usecase" }
+
+actix-web = "4"
+env_logger = "0.9.0"
